<resources>
    <string name="app_name">Quiz</string>

    <string name="title">Sistema Solar</string>

    <!--Questions-->
    <string name="ask1">Quantos planetas existem?</string>
    <string name="ask2">Marque os nome dos planetas que estão corretos.</string>
    <string name="ask3">O nome da nossa Galáxia é… </string>
    <string name="ask4">O que é o Sol?</string>
    <string name="ask5">Buracos Negros existem mesmo?</string>
    <string name="ask6">Você acredita que existe um criador?</string>

    <!--Answers-->
    <string name="answer1Ask1">8</string>
    <string name="answer2Ask1">5</string>
    <string name="answer3Ask1">12</string>

    <string name="answer1Ask2">Juniper</string>
    <string name="answer2Ask2">Jupiter</string>
    <string name="answer3Ask2">Marte</string>

    <string name="answer1Ask3_hint">Via...</string>

    <string name="answer1Ask4">Estrela</string>
    <string name="answer2Ask4">Meteoro</string>
    <string name="answer3Ask4">Planeta</string>

    <string name="answer1Ask5">Sim</string>
    <string name="answer2Ask5">Não</string>

    <string name="answer1Ask6">Sim</string>
    <string name="answer2Ask6">Não</string>

    <!--Adicional -->
    <string name="minScore">Verifique suas respostas</string>
    <string name="scoreEquals1">Você acertou uma questão</string>
    <string name="scoreEquals2">Você acertou duas questões</string>
    <string name="scoreEquals3">Você acertou três questões</string>
    <string name="scoreEquals4">Você acertou três questões</string>
    <string name="maxScore">Parabéns, você tirou a pontuação máxima! </string>
    <string name="noCreator">Quero te mostrar uma coisa</string>
</resources>
